--- a/SoundLove/SoundLove/custom views/ConcertsTableViewCell.xib
+++ b/SoundLove/SoundLove/custom views/ConcertsTableViewCell.xib
@@ -1,15 +1,105 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F6a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Montserrat-Regular.ttf">
+            <string>Montserrat-Regular</string>
+            <string>Montserrat-Regular</string>
+            <string>Montserrat-Regular</string>
+            <string>Montserrat-Regular</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-        </view>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="70" id="RLn-nN-Eb5" customClass="ConcertsTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RLn-nN-Eb5" id="Rc4-FE-aNI">
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HYr-Ms-gYs">
+                        <rect key="frame" x="15" y="12" width="45" height="45"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="45" id="nvY-2D-n9A"/>
+                            <constraint firstAttribute="width" constant="45" id="uZ6-WP-wyd"/>
+                        </constraints>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBz-Fj-1Ob" customClass="CalendarButton">
+                        <rect key="frame" x="256" y="10" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="Bq2-mn-6mC"/>
+                            <constraint firstAttribute="height" constant="50" id="GWK-dv-0Es"/>
+                        </constraints>
+                        <state key="normal" image="calendarButton">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ab 35,00 €" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="176" translatesAutoresizingMaskIntoConstraints="NO" id="UNp-e8-aj4">
+                        <rect key="frame" x="70" y="54" width="176" height="13"/>
+                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="10"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="in 20 Tagen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="176" translatesAutoresizingMaskIntoConstraints="NO" id="KlV-1s-jJt">
+                        <rect key="frame" x="70" y="37" width="176" height="13"/>
+                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="10"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gräfenhainichen, DE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="176" translatesAutoresizingMaskIntoConstraints="NO" id="BMG-LO-Tkp">
+                        <rect key="frame" x="70" y="20" width="176" height="13"/>
+                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="10"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MELT!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="176" translatesAutoresizingMaskIntoConstraints="NO" id="KIQ-OM-Bkl">
+                        <rect key="frame" x="70" y="1" width="176" height="15"/>
+                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="12"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="lBz-Fj-1Ob" secondAttribute="trailing" constant="14" id="1BY-mF-vf8"/>
+                    <constraint firstItem="lBz-Fj-1Ob" firstAttribute="leading" secondItem="KIQ-OM-Bkl" secondAttribute="trailing" constant="10" id="1jB-qW-aWY"/>
+                    <constraint firstAttribute="centerY" secondItem="KIQ-OM-Bkl" secondAttribute="centerY" multiplier="4:1" id="5JM-q5-oc5"/>
+                    <constraint firstAttribute="centerY" secondItem="KlV-1s-jJt" secondAttribute="centerY" multiplier="4:5" id="81T-aW-Yqq"/>
+                    <constraint firstItem="BMG-LO-Tkp" firstAttribute="leading" secondItem="HYr-Ms-gYs" secondAttribute="trailing" constant="10" id="LGy-lE-TLo"/>
+                    <constraint firstItem="HYr-Ms-gYs" firstAttribute="leading" secondItem="Rc4-FE-aNI" secondAttribute="leading" constant="15" id="OFt-Yq-KPM"/>
+                    <constraint firstItem="lBz-Fj-1Ob" firstAttribute="leading" secondItem="BMG-LO-Tkp" secondAttribute="trailing" constant="10" id="SZ6-AJ-7Dq"/>
+                    <constraint firstItem="lBz-Fj-1Ob" firstAttribute="leading" secondItem="KlV-1s-jJt" secondAttribute="trailing" constant="10" id="SdD-cR-Bz1"/>
+                    <constraint firstItem="lBz-Fj-1Ob" firstAttribute="leading" secondItem="UNp-e8-aj4" secondAttribute="trailing" constant="10" id="c1D-pD-vG7"/>
+                    <constraint firstItem="KlV-1s-jJt" firstAttribute="leading" secondItem="HYr-Ms-gYs" secondAttribute="trailing" constant="10" id="dxi-UX-L3L"/>
+                    <constraint firstItem="KIQ-OM-Bkl" firstAttribute="leading" secondItem="HYr-Ms-gYs" secondAttribute="trailing" constant="10" id="edT-vh-kOQ"/>
+                    <constraint firstItem="UNp-e8-aj4" firstAttribute="leading" secondItem="HYr-Ms-gYs" secondAttribute="trailing" constant="10" id="f4i-Tj-C9k"/>
+                    <constraint firstAttribute="centerY" secondItem="HYr-Ms-gYs" secondAttribute="centerY" id="hIe-Fc-r8K"/>
+                    <constraint firstAttribute="centerY" secondItem="BMG-LO-Tkp" secondAttribute="centerY" multiplier="4:3" id="jOY-TE-fhE"/>
+                    <constraint firstAttribute="centerY" secondItem="lBz-Fj-1Ob" secondAttribute="centerY" id="kuO-L2-Jo5"/>
+                    <constraint firstAttribute="centerY" secondItem="UNp-e8-aj4" secondAttribute="centerY" multiplier="4:7" id="pbs-3P-kDL"/>
+                </constraints>
+            </tableViewCellContentView>
+            <connections>
+                <outlet property="calendarButton" destination="lBz-Fj-1Ob" id="9li-LD-KAL"/>
+                <outlet property="concertImageView" destination="HYr-Ms-gYs" id="kM2-xN-7Pk"/>
+                <outlet property="concertTitleLabel" destination="KIQ-OM-Bkl" id="k6A-sk-6kK"/>
+                <outlet property="dateLabel" destination="KlV-1s-jJt" id="sVz-bE-Dpi"/>
+                <outlet property="locationLabel" destination="BMG-LO-Tkp" id="Xmp-Df-7Kq"/>
+                <outlet property="priceLabel" destination="UNp-e8-aj4" id="ydo-wC-MpL"/>
+            </connections>
+            <point key="canvasLocation" x="39" y="338"/>
+        </tableViewCell>
     </objects>
+    <resources>
+        <image name="calendarButton" width="35" height="31"/>
+    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
