--- a/SoundLove/SoundLove/Base.lproj/Main.storyboard
+++ b/SoundLove/SoundLove/Base.lproj/Main.storyboard
@@ -71,7 +71,6 @@
             <string>Montserrat-Regular</string>
             <string>Montserrat-Regular</string>
             <string>Montserrat-Regular</string>
-            <string>Montserrat-Regular</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -171,7 +170,7 @@
                                             <constraint firstAttribute="height" constant="70" id="mgl-Pl-myK"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="15"/>
-                                        <state key="normal" title="Profil" image="profilIcon">
+                                        <state key="normal" title="Abmelden" image="profilIcon">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </state>
@@ -212,15 +211,17 @@
                         <outlet property="concertButton" destination="P4q-du-8VS" id="93d-gK-Edl"/>
                         <outlet property="favoriteConcertButton" destination="X2Z-uq-skV" id="SGJ-O8-uj3"/>
                         <outlet property="infoButton" destination="HPd-CU-lWn" id="B9b-bB-v43"/>
-                        <outlet property="profilButton" destination="e3K-xN-GVo" id="I10-cb-zbF"/>
+                        <outlet property="logoutButton" destination="e3K-xN-GVo" id="2EF-Lw-aHT"/>
                         <outletCollection property="menuButtonsArray" destination="P4q-du-8VS" id="Cdw-uq-IkN"/>
                         <outletCollection property="menuButtonsArray" destination="fg5-jQ-djF" id="ALc-lw-QmP"/>
                         <outletCollection property="menuButtonsArray" destination="X2Z-uq-skV" id="9FX-iw-Wme"/>
                         <outletCollection property="menuButtonsArray" destination="zN5-F3-Ake" id="2qj-hA-dnu"/>
                         <outletCollection property="menuButtonsArray" destination="e3K-xN-GVo" id="0ji-Dq-z3w"/>
+                        <segue destination="oEV-Ef-seq" kind="unwind" identifier="userLoggedOutSegue" unwindAction="unwindToOnboardingView:" id="WGJ-GG-FJn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b25-44-rGF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="oEV-Ef-seq" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="961" y="-201"/>
         </scene>
@@ -1013,50 +1014,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TLx-Pe-Lmf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1192" y="2511"/>
-        </scene>
-        <!--Profil View Controller-->
-        <scene sceneID="D6i-Nz-Mar">
-            <objects>
-                <viewController storyboardIdentifier="ProfilViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jsh-Gv-cxE" customClass="ProfilViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="nkZ-dP-MjB"/>
-                        <viewControllerLayoutGuide type="bottom" id="QcA-Ha-SB1"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="7mJ-co-hHa">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PdC-lc-8KW">
-                                <rect key="frame" x="15" y="498" width="290" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="egK-Ih-tgh"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="18"/>
-                                <state key="normal" title="Logout">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="logoutButtonPressed:" destination="jsh-Gv-cxE" eventType="touchUpInside" id="Bq6-fO-58A"/>
-                                    <segue destination="uRY-Tf-Tu9" kind="unwind" unwindAction="unwindToOnboardingView:" id="tGM-YO-IEZ"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="QcA-Ha-SB1" firstAttribute="top" secondItem="PdC-lc-8KW" secondAttribute="bottom" constant="20" id="6lx-Ri-XOL"/>
-                            <constraint firstAttribute="trailing" secondItem="PdC-lc-8KW" secondAttribute="trailing" constant="15" id="7EZ-L6-gmK"/>
-                            <constraint firstItem="PdC-lc-8KW" firstAttribute="leading" secondItem="7mJ-co-hHa" secondAttribute="leading" constant="15" id="w9D-jf-uNd"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1M5-er-uks" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="uRY-Tf-Tu9" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="1192" y="3163"/>
         </scene>
         <!--Overlay View Controller-->
         <scene sceneID="g4r-HW-wyF">
@@ -1892,13 +1849,13 @@ noch 40 Tage</string>
                                         <color key="textColor" red="0.56862745098039214" green="0.87058823529411766" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLZ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktk-bG-tP7">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="PLZ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktk-bG-tP7">
                                         <rect key="frame" x="20" y="96" width="27" height="18"/>
                                         <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
                                         <color key="textColor" red="0.56862745098039214" green="0.87058823529411766" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ort" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmE-Fp-TOj">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ort" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmE-Fp-TOj">
                                         <rect key="frame" x="20" y="134" width="24" height="18"/>
                                         <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
                                         <color key="textColor" red="0.56862745098039214" green="0.87058823529411766" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
@@ -1916,19 +1873,19 @@ noch 40 Tage</string>
                                         <color key="textColor" red="0.54509803921568623" green="0.5725490196078431" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="10119" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="193" translatesAutoresizingMaskIntoConstraints="NO" id="s8k-w3-eAj">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="10119" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="193" translatesAutoresizingMaskIntoConstraints="NO" id="s8k-w3-eAj">
                                         <rect key="frame" x="101" y="94" width="199" height="18"/>
                                         <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="15"/>
                                         <color key="textColor" red="0.54509803921568623" green="0.5725490196078431" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Berlin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="193" translatesAutoresizingMaskIntoConstraints="NO" id="gWE-eB-gAd">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Berlin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="193" translatesAutoresizingMaskIntoConstraints="NO" id="gWE-eB-gAd">
                                         <rect key="frame" x="101" y="134" width="199" height="18"/>
                                         <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="15"/>
                                         <color key="textColor" red="0.54509803921568623" green="0.5725490196078431" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cbl-YG-4SZ" customClass="WebsiteButton">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cbl-YG-4SZ" customClass="WebsiteButton">
                                         <rect key="frame" x="101" y="162" width="124" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="s0n-yD-P5u"/>
